migration-result/docs/ver/13.x/database-access/guides/dynamic-registration.mdx
---
title: Dynamic Database Registration
description: Register/unregister databases without restarting Teleport.
version: '13.x'
---

Dynamic database registration allows Teleport administrators to register new
databases (or update/unregister existing ones) without having to update the
static configuration and restart Teleport Database Service instances.

Dynamic registration also enables administrators to deploy multiple Database
Service instances for [high availability](/docs/ver/13.x/database-access/guides/ha) by configuring Database
Service replicas to watch for the same database resources.

To enable dynamic registration, include a `resources` section in your Teleport
Database Service configuration with a list of resource label selectors you'd like this
service to monitor for registering:

```yaml
db_service:
  enabled: "yes"
  resources:
  - labels:
      "*": "*"
```

You can use a wildcard selector to register all dynamic app resources in the cluster
on the Database Service or provide a specific set of labels for a subset:

```yaml
resources:
- labels:
    "env": "prod"
    "engine": "postgres"
- labels:
    "env": "test"
    "engine": "mysql"
```

Next define a database resource:

```yaml
kind: db
version: v3
metadata:
  name: example
  description: "Example database"
  labels:
    env: prod
    engine: postgres
spec:
  protocol: "postgres"
  uri: "localhost:5432"
```

The user creating the dynamic registration needs to have a role with access to the
database labels and the `db` resource.  In this example role the user can only
create and maintain databases labeled `env: prod` and `engine: postgres`.

```yaml
kind: role
metadata:
  name: dynamicregexample
spec:
  allow:
    db_labels:
      engine: postgres
      env: prod
    rules:
    - resources:
      - db
      verbs:
      - list
      - create
      - read
      - update
      - delete
version: v5
```

See the full database resource spec [reference](/docs/ver/13.x/database-access/reference/configuration#database-resource).

To create a database resource, run:

```code
$ tctl create database.yaml
```

- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```code
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```code
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

After the resource has been created, it will appear among the list of available
databases (in `tsh db ls` or UI) as long as at least one Database Service
instance picks it up according to its label selectors.

To update an existing database resource, run:

```code
$ tctl create -f database.yaml
```

If the updated resource's labels no longer match a particular database, it
will unregister and stop proxying it.

To delete a database resource, run:

```code
$ tctl rm db/example
```
